syntax = "proto3";

package auth;

option go_package = "/authpb";

// AuthService defines the gRPC service for authentication-related operations
service AuthService {
    rpc Signup (SignupRequest) returns (SignupResponse);
    rpc Signin (SigninRequest) returns (SigninResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

// Message for signup request
message SignupRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
    string phone = 5;
    string role = 6;

    // Organization details
    string organization_name = 7;
    string gst_in = 8;
    string address = 9;
    string city = 10;
    string state = 11;
    string country = 12;
    string zipcode = 13;
    string website = 14;
}

// Response message for signup
message SignupResponse {
    string message = 1;
    string user_id = 2;
    string organization_id = 3;
}

// Message for signin request
message SigninRequest {
    string email = 1;
    string password = 2;
}

// Response message for signin
message SigninResponse {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string access_token = 7;
    string refresh_token = 8;
}

// Message for refresh token request
message RefreshTokenRequest {
    string refresh_token = 1;
}

// Response message for refresh token
message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

